# nomad

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  clippy.toml  flake.nix  rust-toolchain.toml
benches/: Cargo.toml  build.rs
benches/benches/: benches.rs
benches/src/: lib.rs  main.rs
benches/src/collab/: mod.rs  start.rs
crates/auth/: Cargo.toml
crates/auth-types/: Cargo.toml
crates/auth-types/src/: auth_error.rs  auth_infos.rs  github_handle.rs  lib.rs
crates/auth/src/: async_once_lock.rs  auth.rs  auth_infos.rs  auth_state.rs  config.rs  credential_store.rs  github.rs  lib.rs  login.rs  logout.rs
crates/auth/src/actions/: login.rs  logout.rs
crates/auth/src/backend/: mock.rs  mod.rs  neovim.rs
crates/auth/src/editors/: mock.rs  mod.rs  neovim.rs
crates/collab/: Cargo.toml
crates/collab-types/: Cargo.toml
crates/collab-types/src/: counter.rs  lib.rs  message.rs  nomad.rs
crates/collab/src/: collab.rs  collab_editor.rs  config.rs  context.rs  convert.rs  event.rs  event_stream.rs  join.rs  joiner.rs  jump.rs  leave.rs  lib.rs  mapped.rs  neovim_collab.rs  pause.rs  peers.rs  progress.rs  project.rs  resume.rs  root_markers.rs  seq_ext.rs  server_socket.rs  session.rs  session_id.rs  session_status.rs  start.rs  stream_map.rs  utils.rs  yank.rs
crates/collab/src/actions/: join.rs  mod.rs  start.rs  user_busy_error.rs  yank.rs
crates/collab/src/backend/: mock.rs  mod.rs  neovim.rs
crates/collab/src/editors/: mock.rs  mod.rs  neovim.rs
crates/collab/src/session/: detach_buffer_actions.rs  mod.rs  peer_selection.rs  peer_tooltip.rs  project.rs  register_buffer_actions.rs  sync_cursor.rs  sync_replacement.rs
crates/collab/tests/: join.rs  start.rs
crates/collab2/: Cargo.toml
crates/collab2/src/: collab.rs  collab_backend.rs  collab_editor.rs  join.rs  leave.rs  lib.rs  neovim_collab.rs  project.rs  root_markers.rs  session.rs  session_id.rs  start.rs  yank.rs
crates/collab2/src/actions/: join.rs  start.rs
crates/collab2/src/backend/: mock.rs  mod.rs  neovim.rs  test.rs
crates/collab2/src/config/: mod.rs
crates/collab2/src/events/: cursor.rs  edit.rs  join_session.rs  selection.rs  start_session.rs
crates/collab2/src/session/: detach_buffer_actions.rs  mod.rs  peer_selection.rs  peer_tooltip.rs  project.rs  register_buffer_actions.rs  session_ctx.rs  sync_cursor.rs  sync_replacement.rs
crates/collab2/tests/: join.rs  start.rs
crates/editor/: Cargo.toml
crates/editor/src/: access.rs  buffer.rs  context.rs  editor.rs  editor_adapter.rs  lib.rs
crates/editor/src/command/: command.rs  command_args.rs  command_builder.rs
crates/editor/src/context/: buffer.rs  context.rs  cursor.rs  event_handle.rs  mod.rs  selection.rs  state.rs
crates/editor/src/editor/: api.rs  buffer.rs  cursor.rs  editor.rs  editor_adapter.rs  mod.rs  selection.rs
crates/editor/src/module/: action.rs  api_ctx.rs  async_action.rs  function.rs  mod.rs  module.rs  panic_infos.rs  plugin.rs  resume_unwinding.rs
crates/editor/src/notify/: message.rs  mod.rs  namespace.rs
crates/nomad/: Cargo.toml
crates/nomad/macros/: Cargo.toml
crates/nomad/macros/src/: action_name.rs  async_action.rs  lib.rs  ready.rs  test.rs
crates/nomad/src/: action.rs  action_name.rs  actor_map.rs  api.rs  async_action.rs  autocmd.rs  boo.rs  buf_attach.rs  buffer.rs  byte_offset.rs  command.rs  command_args.rs  config.rs  ctx.rs  decoration_provider.rs  diagnostics.rs  edit.rs  editor_ctx.rs  enable.rs  from_ctx.rs  from_with.rs  function.rs  lib.rs  maybe_future.rs  maybe_result.rs  module.rs  module_api.rs  module_commands.rs  module_name.rs  nomad.rs  nomad_command.rs  nvim_buffer.rs  object_safe_module.rs  point.rs  replacement.rs  serde.rs  shared.rs  subscription.rs  test.rs  tests.rs  (+1 more)
crates/nomad/src/autocmds/: buf_add.rs  buf_enter.rs  buf_unload.rs  mod.rs
crates/nomad/src/config/: config.rs  mod.rs
crates/nomad/src/ctx/: auto_command.rs  buffer.rs  file.rs  neovim.rs  text_buffer.rs  text_file.rs
crates/nomad/src/editor/: buffer.rs  buffer_id.rs  buffer_state.rs  mod.rs
crates/nomad/src/events/: cursor.rs
crates/nomad/src/log/: mod.rs  tracing_subscriber.rs
crates/nomad/src/module/: module.rs  module_name.rs
crates/nomad/tests/: Cargo.toml  build.rs
crates/real-fs/: Cargo.toml
crates/real-fs/src/: directory.rs  file.rs  file_descriptor_permit.rs  lib.rs  metadata.rs  real_fs.rs  temp.rs
crates/root-finder/: Cargo.toml
crates/root-finder/src/: error.rs  finder.rs  lib.rs  marker.rs
crates/tempdir/: Cargo.toml
crates/tempdir/src/: fs_ext.rs  lib.rs  tempdir.rs
crates/thread-pool/: Cargo.toml
crates/thread-pool/src/: lib.rs  thread_pool.rs
crates/ui/: Cargo.toml
crates/ui/src/: bound.rs  cells.rs  component.rs  expand_rect.rs  explicit_bound.rs  highlight.rs  lib.rs  popover.rs  render.rs  requested_bound.rs  scene.rs  scene_fragment.rs  surface.rs  view.rs
crates/walkdir/: Cargo.toml  build.rs
crates/walkdir/src/: dir_entry.rs  filter.rs  fs_ext.rs  gitignore.rs  gitignore2.rs  lib.rs  walkdir.rs
docs/: usage.md  (+1 more)
lib/ed/backend-neovim/: Cargo.toml
lib/nvimx/nvimx-emit/: Cargo.toml
lib/nvimx/nvimx-fs/: Cargo.toml
lib/nvimx/nvimx-plugin/: Cargo.toml
lib/nvimx/nvimx-project/: Cargo.toml
lib/nvimx2/backend-neovim/: Cargo.toml
lib/nvimx2/backend-test/: Cargo.toml
lib/nvimx2/nvimx-macros/: Cargo.toml
tests/: Cargo.toml  build.rs
tests/src/: lib.rs
tests/src/collab/: cursors.rs  event_stream.rs  join.rs  neovim.rs  start.rs  text_edits.rs
tests/src/collab_project/: encode.rs
tests/src/ed/: buffer.rs  cursor.rs  mod.rs  selection.rs  test_editor.rs
tests/src/editor/: buffer.rs  cursor.rs  selection.rs  test_editor.rs
tests/src/gitignore/: mod.rs
tests/src/mock/: buffer.rs  cursor.rs
tests/src/neovim/: buffer.rs  cursor.rs  events.rs  mod.rs  selection.rs
tests/src/real_fs/: directory.rs
tests/src/thread_pool/: mod.rs
tests/src/utils/: distributions.rs  fuzz.rs  mod.rs
tests/src/walkdir/: mod.rs
xtask/: Cargo.toml
xtask/src/: build.rs  lib.rs  main.rs
xtask/src/neovim/: build.rs  mod.rs
(+451 files in other folders)
