[workspace]
resolver = "2"
members = ["crates/*", "neovim"]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Nomad <hello@nomad.foo>"]
license = "MIT"

[workspace.dependencies]
neovim = { path = "./neovim" }
once_cell = "1.18"
serde = "1.0"
thiserror = "1.0"
tracing = "0.1"

[workspace.lints.rust]
future_incompatible = "deny"
missing_docs = "deny"
nonstandard_style = "deny"

[workspace.lints.rustdoc]
broken_intra_doc_links = "deny"
private_intra_doc_links = "deny"

[package]
name = "nomad-neovim"
version.workspace = true
edition.workspace = true
authors.workspace = true

[lib]
name = "nomad"
crate-type = ["cdylib"]

[features]
neovim-0-9 = ["neovim/neovim-0-9"]
neovim-nightly = ["neovim/neovim-nightly"]

[dependencies]
neovim = { workspace = true }
nvim-oxi = { git = "https://github.com/noib3/nvim-oxi", features = ["libuv"] }
