[package]
name = "benches"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
publish.workspace = true

[features]
collab = [
  "dep:collab",
  "dep:walkdir",
  # These are actually only needed when the `neovim-repo` feature is turned on,
  # but since it's up to the build script to decide whether to turn it on, we
  # need to eagerly enable them here.
  #
  # See https://github.com/rust-lang/cargo/issues/5499 for more infos.
  "ed/os-fs",
  "walkdir?/gitignore",
]
neovim-repo = []

[dependencies]
abs-path = { workspace = true }
criterion = "0.5"
ed = { workspace = true }
futures-lite = { workspace = true }
mock = { workspace = true }
thread-pool = { workspace = true }

# Collab-related dependencies.
collab = { workspace = true, optional = true, features = ["benches", "mock"] }
walkdir = { workspace = true, optional = true }

[build-dependencies]
abs-path = { workspace = true, features = ["macros"] }
anyhow = "1.0"
git2 = { workspace = true, features = ["https", "vendored-openssl"] }

[[bench]]
name = "benches"
harness = false

[lints]
workspace = true
