[package]
name = "tests"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
publish.workspace = true

[lib]
# Needed to run Neovim tests.
crate-type = ["cdylib"]

[features]
neovim = ["dep:neovim", "auth/neovim", "collab/neovim"]
neovim-nightly = ["neovim", "neovim/nightly"]

[dependencies]
abs-path = { workspace = true, features = ["macros"] }
async-io = { workspace = true }
auth = { workspace = true, features = ["mock"] }
cauchy = { workspace = true }
collab = { workspace = true, features = ["mock"] }
editor = { workspace = true }
executor = { workspace = true }
flume = { workspace = true }
fs = { workspace = true }
futures-lite = { workspace = true, features = ["default"] }
futures-util = { workspace = true, features = ["default"] }
gitignore = { workspace = true }
mock = { workspace = true }
pin-project-lite = { workspace = true }
rand = { workspace = true }
rand_chacha = { workspace = true }
real-fs = { workspace = true, features = ["temp"] }
thread-pool = { workspace = true }
tracing-subscriber = { workspace = true }

neovim = { workspace = true, optional = true, features = ["test"] }

[build-dependencies]
neovim = { workspace = true, features = ["test"] }

[lints]
workspace = true
