[package]
name = "xtask"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
anyhow = "1.0"
clap = { version = "4", features = ["derive"] }
fs = { workspace = true }
root-finder = { workspace = true }
xshell = "0.2"

[lints]
workspace = true
