[package]
name = "xtask"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
abs-path = { workspace = true, features = ["macros"] }
anyhow = "1.0"
cargo_metadata = "0.21"
clap = { version = "4", features = ["derive"] }
serde = { workspace = true, features = ["derive"] }
serde_json = "1"

[build-dependencies]
cargo_metadata = "0.21"
serde_json = "1"

[lints]
workspace = true
