[package]
name = "auth"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
publish.workspace = true

[features]
mock = []
neovim = [
  "keyring/apple-native",
  "keyring/secret-service",
  "dep:neovim",
  "dep:reqwest",
]

[dependencies]
abs-path = { workspace = true }
auth-types = { workspace = true, features = ["serde"] }
cauchy = { workspace = true }
derive_more = { workspace = true }
editor = { workspace = true }
event-listener = { workspace = true }
futures-util = { workspace = true }
keyring = { workspace = true }
open = { workspace = true }
rand = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
url = { workspace = true, features = ["serde"] }

neovim = { workspace = true, optional = true }
reqwest = { workspace = true, optional = true, features = ["json"] }

[lints]
workspace = true
