[package]
name = "collab-types"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
publish.workspace = true

[features]
default = ["serde"]
nomad = ["auth-types/serde", "dep:ulid"]
serde = [
  "auth-types/serde",
  "bytes/serde",
  "cola/serde",
  "crop/serde",
  "puff/serde",
  "smallvec/serde",
  "smol_str/serde",
  "dep:serde",
]

[dependencies]
auth-types = { workspace = true }
bytes = "1"
cauchy = { workspace = true }
cola = "0.5"
crop = "0.4"
derive_more = { workspace = true }
fxhash = { workspace = true }
nohash = { workspace = true }
puff = { git = "ssh://git@github.com/nomad/puff.git" }
smallvec = { workspace = true }
smol_str = { workspace = true }

serde = { workspace = true, optional = true, features = ["derive", "rc"] }
ulid = { version = "1", optional = true, features = ["serde"] }

[lints]
workspace = true
