[package]
name = "collab"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
publish = false

[dependencies]
async-net = { workspace = true }
nomad = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
url = { version = "2", features = ["serde"] }

[lints]
workspace = true

# Blocked by https://github.com/rust-lang/cargo/issues/13157
#
# [lints.rust]
# unsafe_code = "deny"
