[package]
name = "collab2"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
collab-messaging = { git = "ssh://git@github.com/nomad/collab.git" }
collab-project = { git = "ssh://git@github.com/nomad/collab.git" }
nomad-server = { git = "ssh://git@github.com/nomad/collab.git" }
nomad2 = { workspace = true }

[lints]
workspace = true
