[package]
name = "collab2"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
publish.workspace = true

[features]
neovim = ["nvimx2/neovim-0-10"]

[dependencies]
auth = { workspace = true }
nvimx2 = { workspace = true }
serde = { workspace = true, features = ["derive"] }

[lints]
workspace = true
