[package]
name = "editor"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
publish.workspace = true

[features]
tests = []

[dependencies]
abs-path = { workspace = true, features = ["serde"] }
cauchy = { workspace = true }
clipboard = { workspace = true }
compact_str = { workspace = true }
derive_more = { workspace = true }
executor = { workspace = true }
flume = { workspace = true, features = ["async"] }
fs = { workspace = true }
futures-lite = { workspace = true, features = ["std"] }
fxhash = { workspace = true }
http-client = { workspace = true }
itertools = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
smallvec = { workspace = true }
smol_str = { workspace = true }
strsim = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }

[lints]
workspace = true
