[package]
name = "real-fs"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
publish.workspace = true

[features]
temp = ["dep:tempfile"]

[dependencies]
abs-path = { workspace = true }
async-fs = { workspace = true }
async-lock = { workspace = true }
fs = { workspace = true }
futures-util = { workspace = true, features = ["io"] }
notify = { workspace = true, optional = true }
pin-project-lite = { workspace = true }

tempfile = { workspace = true, optional = true }

[lints]
workspace = true
