[package]
name = "root-finder"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
abs-path = { workspace = true }
cauchy = { workspace = true }
derive_more = { workspace = true }
ed = { workspace = true }
futures-util = { workspace = true }

[lints]
workspace = true
