[package]
name = "tempdir"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
abs-path = { workspace = true }
cauchy = { workspace = true }
derive_more = { workspace = true }
ed = { workspace = true, features = ["os-fs"] }
futures-util = { workspace = true }
tempdir = "0.3"

[lints]
workspace = true
