[package]
name = "thread-pool"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
async-oneshot = { git = "https://github.com/irrustible/async-oneshot", rev = "811bedf" }
ed = { workspace = true }
futures-executor = { workspace = true, features = ["thread-pool"] }
pin-project-lite = { workspace = true }

[lints]
workspace = true
