[package]
name = "ui"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
publish.workspace = true

[features]
default = ["neovim-0-9"]
neovim-0-9 = ["nvim/neovim-0-9"]
neovim-nightly = ["nvim/neovim-nightly"]

[dependencies]
nvim = { workspace = true }

[lints]
workspace = true
