[package]
name = "ui"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
publish.workspace = true

[features]
default = ["neovim-nightly"]
neovim-nightly = ["nvim/neovim-nightly"]

[dependencies]
compact_str = "0.7"
nvim = { workspace = true }
str_indices = "0.4"

[dev-dependencies]
quickcheck = { workspace = true }
quickcheck_macros = { workspace = true }

[lints]
workspace = true
