[package]
name = "walkdir"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
publish.workspace = true

[features]
gitignore = ["ed/os-fs"]

[dependencies]
abs-path = { workspace = true }
cauchy = { workspace = true }
derive_more = { workspace = true }
ed = { workspace = true }
either = { workspace = true }
flume = { workspace = true, features = ["async"] }
futures-util = { workspace = true, features = ["default"] }
send-future = "0.1"

[dev-dependencies]
abs-path = { workspace = true, features = ["macros"] }

[lints]
workspace = true
