[package]
name = "nomad-tests"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[features]
neovim-0-9 = ["nomad/neovim-0-9"]
neovim-nightly = ["nomad/neovim-nightly"]

[build-dependencies]
nomad = { workspace = true, features = ["tests"] }

[dependencies]
crop = "0.4"
nomad = { workspace = true, features = ["tests"] }
