[package]
name = "backend-neovim"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
publish.workspace = true

[features]
mlua = ["nvim-oxi/mlua", "nvim-oxi/__vendored_luajit"]
nightly = ["nvim-oxi/neovim-nightly"]

[dependencies]
async-oneshot = { git = "https://github.com/irrustible/async-oneshot", rev = "811bedf" }
async-task = "4.7"
concurrent-queue = "2.5"
ed-core = { path = "../core", features = ["os-fs"] }
futures-executor = { version = "0.3", features = ["thread-pool"] }
neovim-macros = { path = "./macros" }
nvim-oxi = { git = "https://github.com/noib3/nvim-oxi", features = [
	"libuv",
	"neovim-0-10",
] }
pin-project-lite = { workspace = true }
serde = { workspace = true }
serde_path_to_error = "0.1"
smallvec = { workspace = true }
strsim = { workspace = true }
thiserror = { workspace = true }

[lints]
workspace = true
