[package]
name = "nvimx-emit"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[features]
default = ["neovim-0-10"]
neovim-0-10 = ["nvim-oxi/neovim-0-10"]
neovim-nightly = ["nvim-oxi/neovim-nightly"]

[dependencies]
futures-util = { workspace = true, features = ["default"] }
nvim-oxi = { workspace = true }
nvimx-diagnostics = { workspace = true }
nvimx-executor = { workspace = true }
nvimx-plugin = { workspace = true }

[lints]
workspace = true
