[package]
name = "nvimx-fs"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
async-fs = { workspace = true }
eerie = { git = "ssh://git@github.com/nomad/eerie.git" }
futures-util = { workspace = true }
pin-project-lite = { workspace = true }
thiserror = { workspace = true }

[lints]
workspace = true
