[package]
name = "backend-test"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
publish.workspace = true

[features]

[dependencies]
async-task = "4.7"
concurrent-queue = "2.5"
crop = "0.4"
fxhash = { workspace = true }
indexmap = "2.7"
nvimx-core = { path = "../nvimx-core" }
pin-project-lite = { workspace = true }
serde = { workspace = true }
serde_json = "1"

[lints]
workspace = true
