[package]
name = "nvimx2-macros"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
publish.workspace = true

[lib]
proc-macro = true

[features]
plugin = []

[dependencies]
quote = "1.0"
proc-macro2 = "1.0"
syn = { version = "2.0", features = ["full"] }

[lints]
workspace = true
